--- a/Projeto-Angular/ford-dashboard/src/app/home/home.component.html
+++ b/Projeto-Angular/ford-dashboard/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="home-page">
   <!-- 🔹 Imagem de fundo -->
-  <img src="assets/ford-car.png" alt="Ford Background" class="background-image" />
+  <img src="assets/ford-storm.png" alt="Ford Background" class="background-image" />
 
   <!-- 🔹 Botão de menu (☰) -->
   <div class="menu">
